use malloc_trim if available to free memory to the system

might avoid too large heap sizes in the long run

BUG: 509126